manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: kneipolympics-deployment
  name: kneipolympics-deployment
  namespace: kneipolympics
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kneipolympics-deployment
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.service: kneipolympics-deployment
    spec:
      containers:
        - image: ghcr.io/pesca-dev/kneipolympics:0f37415adeef5b44880b0d04b3ab4a380213395f
          imagePullPolicy: Always
          name: aoc-website-deployment
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
