manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: kneipolympics-service
  name: kneipolympics-service
  namespace: kneipolympics
spec:
  ports:
    - protocol: TCP
      name: web
      port: 3000
  selector:
    io.kompose.service: kneipolympics-deployment
status:
  loadBalancer: {}
